tests/pos/i9392/J.java
public class J {
    int i = 0;
    int i() { return 1; }
}
