tests/neg/i17021.ext-java/A.java
// Derives from run/i17021.defs, but with a Java protected member
package p1;

public class A {
  protected int foo() { return 1; }
}
